--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "report:coverage": "lerna run report:coverage --parallel"
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-typescript": "^7.15.0",
