--- a/packages/dom-expressions/package.json
+++ b/packages/dom-expressions/package.json
@@ -20,6 +20,7 @@
     "devalue": "^2.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
     "babel-plugin-jsx-dom-expressions": "^0.30.9"
   }
 }
