feat: dynamic universal mode with dom optimizations and custom renderers

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "lerna bootstrap"
   },
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-typescript": "^7.15.0",
